--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "class-change",
   "version": "0.0.3",
   "description": "Simplified CSS class change event delegation and multi-class add, remove and toggle methods",
-  "author": "John Hildenbiddle <john@hildenbiddle.com> (http://hildenbiddle.com)",
+  "author": "John Hildenbiddle (http://hildenbiddle.com)",
   "license": "MIT",
   "homepage": "https://github.com/jhildenbiddle/class-change#readme",
   "repository": {
