--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "class-change",
   "version": "1.0.3",
-  "description": "A small, dependency-free micro-library for manipulating CSS class names and generating class change event listeners.",
-  "author": "John Hildenbiddle (http://hildenbiddle.com)",
+  "description": "A flexible, lightweight, dependency-free micro-library that simplifies CSS class changes and events",
+  "author": "John Hildenbiddle <http://hildenbiddle.com>",
   "license": "MIT",
-  "homepage": "https://github.com/jhildenbiddle/class-change#readme",
+  "homepage": "https://github.com/jhildenbiddle/class-change",
   "repository": {
     "type": "git",
     "url": "git+https://jhildenbiddle@github.com/jhildenbiddle/class-change.git"
@@ -13,31 +13,73 @@
     "url": "https://github.com/jhildenbiddle/class-change/issues"
   },
   "keywords": [
+    "attribute",
     "change",
     "class",
     "classChange",
     "classList",
     "css",
-    "delegate",
-    "delegation",
+    "data",
     "event",
+    "html",
     "listener",
-    "polyfill"
+    "polyfill",
+    "ponyfill"
   ],
-  "main": "src/index.js",
+  "browserslist": [
+    "ie >= 9"
+  ],
+  "main": "dist/class-change.js",
+  "module": "dist/class-change.esm.js",
+  "unpkg": "dist/class-change.min.js",
   "scripts": {
-    "build": "webpack --hide-modules",
-    "clean": "rimraf dist/*",
-    "serve": "browser-sync start --server 'demo' --files 'demo,dist' --serveStatic 'dist' --reload-on-restart --no-open --no-notify",
-    "start": "npm run clean && npm run watch & npm run serve",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon package.json & npm run build -- --watch"
+    "prepare": "run-s clean build",
+    "build": "rollup -c",
+    "clean": "rimraf build/* coverage/* dist/*",
+    "serve": "node server.js",
+    "start": "run-p watch serve",
+    "test": "karma start",
+    "test-watch": "npm test -- --auto-watch --no-single-run",
+    "test-remote": "npm test -- --remote",
+    "version": "npm run prepare && git add -A dist",
+    "preversion": "npm test",
+    "watch": "run-p 'build -- -w'"
   },
   "devDependencies": {
-    "browser-sync": "^2.14.0",
-    "deepcopy": "^0.6.3",
-    "nodemon": "^1.10.0",
-    "rimraf": "^2.5.4",
-    "webpack": "^1.13.1"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-istanbul": "^4.1.6",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.24.4",
+    "chai": "^4.1.2",
+    "compression": "^1.7.2",
+    "eslint": "^4.19.1",
+    "eslint-plugin-chai-expect": "^1.1.1",
+    "eslint-plugin-html": "^4.0.3",
+    "eslint-plugin-mocha": "^5.0.0",
+    "karma": "^2.0.2",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.1.1",
+    "karma-coverage": "^1.1.2",
+    "karma-eslint": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-sauce-launcher": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^3.0.0",
+    "lodash.merge": "^4.6.1",
+    "mocha": "^4.1.0",
+    "npm-run-all": "^4.1.3",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.60.1",
+    "rollup-plugin-babel": "^3.0.4",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-eslint": "^4.0.0",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-node-resolve": "^3.3.0",
+    "rollup-plugin-uglify": "^3.0.0",
+    "webpack": "^4.12.0"
   }
 }
