--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "class-change",
-  "description": "A flexible, lightweight, dependency-free micro-library that simplifies CSS class changes and events",
+  "description": "A small, dependency-free Element.classList alternative for manipulating CSS class names and creating declarative class-related event listeners",
   "main": "dist/class-change.js",
   "authors": [
     "John Hildenbiddle (http://hildenbiddle.com)"
@@ -25,7 +25,7 @@
     "polyfill",
     "ponyfill"
   ],
-  "homepage": "https://github.com/jhildenbiddle/class-change",
+  "homepage": "https://jhildenbiddle.github.io/class-change",
   "ignore": [
     "**/.*",
     "bower_components",
