--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "class-change",
   "version": "1.0.3",
-  "description": "A flexible, lightweight, dependency-free micro-library that simplifies CSS class changes and events",
+  "description": "A small, dependency-free Element.classList alternative for manipulating CSS class names and creating declarative class-related event listeners",
   "author": "John Hildenbiddle <http://hildenbiddle.com>",
   "license": "MIT",
-  "homepage": "https://github.com/jhildenbiddle/class-change",
+  "homepage": "https://jhildenbiddle.github.io/class-change",
   "repository": {
     "type": "git",
     "url": "git+https://jhildenbiddle@github.com/jhildenbiddle/class-change.git"
