--- a/package.json
+++ b/package.json
@@ -46,20 +46,20 @@
     "watch": "run-p 'build -- -w'"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "@babel/core": "^7.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "babel-loader": "^8.0.4",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "browser-sync": "^2.24.4",
-    "chai": "^4.1.2",
-    "compression": "^1.7.2",
-    "eslint": "^4.19.1",
-    "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-html": "^4.0.3",
-    "eslint-plugin-mocha": "^5.0.0",
-    "karma": "^2.0.2",
+    "babel-plugin-istanbul": "^5.1.0",
+    "browser-sync": "^2.26.3",
+    "chai": "^4.2.0",
+    "compression": "^1.7.3",
+    "eslint": "^5.8.0",
+    "eslint-plugin-chai-expect": "^2.0.1",
+    "eslint-plugin-html": "^4.0.6",
+    "eslint-plugin-mocha": "^5.2.0",
+    "karma": "^3.1.1",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-coverage": "^1.1.2",
@@ -68,18 +68,18 @@
     "karma-mocha-reporter": "^2.2.5",
     "karma-sauce-launcher": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.0",
+    "karma-webpack": "^3.0.5",
     "lodash.merge": "^4.6.1",
     "mocha": "^4.1.0",
     "npm-run-all": "^4.1.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.60.1",
-    "rollup-plugin-babel": "^3.0.4",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-eslint": "^4.0.0",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "webpack": "^4.12.0"
+    "rollup": "^0.66.6",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.2.0",
+    "rollup-plugin-eslint": "^5.0.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-terser": "^3.0.0",
+    "webpack": "^4.23.1"
   }
 }
