--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "class-change",
   "version": "1.1.2",
-  "description": "A micro-library for manipulating CSS class names, triggering change events using HTML data attributes, and creating declarative class-related event listeners",
+  "description": "A versatile Element.classList alternative for manipulating CSS class names, triggering change events using HTML data attributes, and creating class-related event listeners using a simple, declarative API.",
   "author": "John Hildenbiddle <http://hildenbiddle.com>",
   "license": "MIT",
   "homepage": "https://jhildenbiddle.github.io/class-change",
