--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: required
+dist: trusty
 language: node_js
 node_js: "stable"
 
 addons:
-  chrome: stable
+  hosts:
+    - travis.dev
 
 notifications:
   email: false
