--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "serve": "node server.js",
     "start": "run-p watch serve",
     "test": "karma start",
-    "test-watch": "npm test -- --auto-watch --no-single-run",
-    "test-remote": "npm test -- --remote",
+    "test-watch": "karma start --auto-watch --no-single-run",
+    "test-remote": "karma start --remote",
     "version": "npm run prepare && npm test && git add -A dist",
     "watch": "run-p 'build -- -w'"
   },
@@ -61,7 +61,7 @@
     "karma": "^3.1.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.1.1",
-    "karma-coverage": "^1.1.2",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-eslint": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
