--- a/package.json
+++ b/package.json
@@ -45,40 +45,40 @@
     "watch": "run-p 'build -- -w'"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.2.0",
-    "babel-loader": "^8.0.4",
+    "@babel/core": "^7.2.2",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "babel-loader": "^8.0.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^5.1.0",
     "browser-sync": "^2.26.3",
     "chai": "^4.2.0",
     "compression": "^1.7.3",
-    "eslint": "^5.9.0",
+    "eslint": "^5.12.0",
     "eslint-plugin-chai-expect": "^2.0.1",
-    "eslint-plugin-html": "^4.0.6",
-    "eslint-plugin-mocha": "^5.2.0",
-    "karma": "^3.1.3",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-mocha": "^5.2.1",
+    "karma": "^3.1.4",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.1.1",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-eslint": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sauce-launcher": "^1.2.0",
+    "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.0-rc.5",
     "lodash.merge": "^4.6.1",
     "mocha": "^4.1.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^2.6.2",
-    "rollup": "^0.66.6",
-    "rollup-plugin-babel": "^4.0.3",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.0.2",
+    "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-eslint": "^5.0.0",
     "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
-    "rollup-plugin-terser": "^3.0.0",
-    "webpack": "^4.27.1"
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^4.0.2",
+    "webpack": "^4.28.1"
   }
 }
