--- a/package.json
+++ b/package.json
@@ -48,37 +48,37 @@
     "@babel/core": "^7.6.0",
     "@babel/polyfill": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "babel-loader": "^8.0.5",
     "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-istanbul": "^5.2.0",
+    "babel-plugin-istanbul": "^6.0.0",
     "browser-sync": "^2.26.7",
     "chai": "^4.2.0",
     "compression": "^1.7.4",
-    "eslint": "^6.3.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-chai-expect": "^2.0.1",
     "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-mocha": "^6.1.1",
-    "karma": "^4.3.0",
+    "eslint-plugin-mocha": "^9.0.0",
+    "karma": "^6.3.4",
+    "karma-browserstack-launcher": "^1.6.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-eslint": "^2.2.0",
-    "karma-mocha": "^1.3.0",
+    "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sauce-launcher": "^2.0.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.0-rc.5",
+    "karma-webpack": "^5.0.0",
     "lodash.merge": "^4.6.1",
-    "mocha": "^4.1.0",
+    "mocha": "^9.1.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
-    "rollup": "^1.21.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup": "^2.56.3",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.1",
-    "webpack": "^4.39.3"
+    "rollup-plugin-terser": "^7.0.2",
+    "webpack": "^5.52.0"
   }
 }
