--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "prepare": "run-s clean build",
     "build": "rollup -c",
     "clean": "rimraf build/* coverage/* dist/*",
+    "lint": "eslint . && markdownlint . --ignore node_modules",
     "serve": "node server.js",
     "start": "run-p watch serve",
-    "test": "karma start",
+    "test": "npm run lint && karma start",
     "test-watch": "karma start --auto-watch --no-single-run",
     "test-remote": "karma start --remote",
     "version": "npm run prepare && npm test && git add -A dist",
@@ -73,6 +74,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^5.0.0",
     "lodash.merge": "^4.6.1",
+    "markdownlint-cli": "^0.28.1",
     "mocha": "^9.1.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.0",
